Fixed a css file linking error.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	
 	<link rel="shortcut icon" type="image/x-icon" href="dependencies\Icons\globe favicon.png" />
     <link rel="stylesheet" href="css/style.css"/>
-    <link rel="stylesheet" href="dependencies\Leaflet\leaflet.css" integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin=""/>
+    <link rel="stylesheet" href="dependencies\Leaflet\leaflet.css"/>
     <link rel="stylesheet" href="dependencies\extraMarkers\css\leaflet.extra-markers.min.css">
 
 </head>
