--- a/index.html
+++ b/index.html
@@ -7,16 +7,29 @@
 	
 	<title>Gazetteer</title>
 	
-	<link rel="shortcut icon" type="image/x-icon" href="dependencies\Icons\globe favicon.png" />
+	<link rel="shortcut icon" type="image/x-icon" href="dependencies/Icons/globe favicon.png" />
+    <link rel="stylesheet" href="dependencies/Leaflet/leaflet.css"/>
+    <link rel="stylesheet" href="dependencies/extraMarkers/css/leaflet.extra-markers.min.css">
+    <link rel="stylesheet" href="dependencies/markerCluster/dist/MarkerCluster.css"/>
+    <link rel="stylesheet" href="dependencies/markerCluster/dist/MarkerCluster.Default.css"/>
     <link rel="stylesheet" href="css/style.css"/>
-    <link rel="stylesheet" href="dependencies\Leaflet\leaflet.css"/>
-    <link rel="stylesheet" href="dependencies\extraMarkers\css\leaflet.extra-markers.min.css">
-
 </head>
 <body>
     <div id="map">
 
         <div id="enterDiv">
+            <div id="enterLoader">
+                <div class="circlesContainer" id="c1">
+                    <div class="c"></div>
+                    <div class="c"></div>
+                    <div class="c"></div>
+                </div>
+                <div class="circlesContainer" id="c2">
+                    <div class="c"></div>
+                    <div class="c"></div>
+                    <div class="c"></div>
+                </div>
+            </div>
             <button id="enterButton">Enter</button>
 
             <table id="onLoadLocation">
@@ -55,7 +68,10 @@
                         </button>
                         <button class="buttons" id="financialButton">
                             <img class="buttonIcons" src="dependencies\Icons\dollar.png">
-                        </button>                       
+                        </button>  
+                        <button class="buttons" id="newsButton">
+                            <img class="buttonIcons" src="dependencies\Icons\newspaper-folded.png">
+                        </button>                     
                         <button class="buttons" id="wikiButton">
                             <img class="buttonIcons" src="dependencies\Icons\social.png">
                         </button>  
@@ -65,12 +81,13 @@
                         <button class="buttons" id="weatherButton">
                             <img class="buttonIcons" src="dependencies\Icons\weather.png">
                         </button> 
+                        <button class="buttons" id="eventButton">
+                            <img class="buttonIcons" src="dependencies\Icons\event.png">
+                        </button> 
                     </div>
                 </div>
 
                 <div class="display" id="generalDisplay">
-
-                    <button class="hideButton">Hide</button>
 
                     <table class="table" id="generalTable">
                         <tr>
@@ -112,8 +129,6 @@
                 </div>
 
                 <div class="display" id="financialDisplay">
-
-                    <button class="hideButton">Hide</button>
 
                     <table class="table" id="financialTable">
                         <tr>
@@ -163,8 +178,6 @@
                 </div>
 
                 <div class="display" id="weatherDisplay">
-
-                    <button class="hideButton" id="hide">Hide</button>
         
                     <table class="table" id="financialTable">
                         <tr>
@@ -224,6 +237,57 @@
                         </tr>
                     </table> 
                 </div>
+
+                <div class="display" id="newsDisplay">
+
+                    <button class="hideButton">Hide</button>
+
+                    <div id="newsNav">                      
+                        <select id="newsCategory">
+                            <option value="top">Top</option>
+                            <option value="business">Business</option>
+                            <option value="entertainment">Entertainment</option>
+                            <option value="environment">Environment</option>
+                            <option value="food">Food</option>
+                            <option value="health">Health</option>
+                            <option value="politics">Politics</option>
+                            <option value="science">Science</option>
+                            <option value="sports">Sports</option>
+                            <option value="technology">Technology</option>                           
+                            <option value="tourism">Tourism</option>
+                            <option value="tourism">World</option>
+                        </select>
+                        <p id="newsTitle">News</p>
+                    </div>
+                    <div id="newsScroll" tabindex="0">
+                        <ul class="multiList" id="newsList">
+                            
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="display" id="eventDisplay">
+                    <button class="hideButton">Hide</button>
+                    <div id="eventNavTitle">
+                        Events
+                    </div>
+                    <div id="eventNav">                      
+                        <select id="eventCategory">
+                            <option>Category: </option>
+                            <option value="sport">Sport</option>
+                            <option value="music">Music</option>
+                            <option value="theatre">Theatre</option>
+                            <option value="comedy">Comedy</option>
+                        </select>
+                        <input type="date" id="eventDate">
+                        <button id="eventSearch">&#x1F50E</button>
+                    </div>
+                    <div id="eventScroll">
+                        <ul class="multiList" id="eventList">
+
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div> 
 
@@ -247,10 +311,11 @@
         <div id="cityAlert">Click on a city to reveal more info!</div> 
     </div>
 
-    <script type="application/javascript" src="dependencies\Leaflet\leaflet.js"></script>
     <script type="application/javascript" src="js/jquery-3.6.4.min.js"></script>
-    <script type="application/javascript" src="js/script.js"></script>
-    <script type="application/javascript" src="dependencies\extraMarkers\js\leaflet.extra-markers.min.js"></script>
+    <script type="application/javascript" src="dependencies/Leaflet/leaflet.js"></script>   
+    <script type="application/javascript" src="dependencies/extraMarkers/js/leaflet.extra-markers.min.js"></script>
+    <script type="application/javascript" src="dependencies/markerCluster/dist/leaflet.markercluster-src.js"></script>
     <script src="https://kit.fontawesome.com/b47c13db99.js" crossorigin="anonymous"></script>
+    <script type="application/javascript" src="js/script.js"></script>
 </body>
 </html>
